--- a/.github/workflows/clean-altstore-json.yml
+++ b/.github/workflows/clean-altstore-json.yml
@@ -83,6 +83,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add repo-cleaned.json
+          git add repo-source.json
           git commit -m "Auto-cleaned and updated metadata" || echo "No changes to commit"
           git push
